// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Matches Test Calculator Components Matches 1`] = `
<div
  className="whole"
>
  <h1
    className="calculator-text"
  >
    Lets do some math !
  </h1>
  <div
    className="main-container"
  >
    <div
      className="result-container"
    >
      <span
        id="result"
      >
        0
      </span>
    </div>
    <div
      className="body-container"
    >
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="AC"
      >
        AC
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="+/-"
      >
        +/-
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="%"
      >
        %
      </button>
      <button
        className="symbol-2"
        onClick={[Function]}
        type="button"
        value="÷"
      >
        ÷
      </button>
    </div>
    <div
      className="body-container"
    >
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="7"
      >
        7
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="8"
      >
        8
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="9"
      >
        9
      </button>
      <button
        className="symbol-2"
        onClick={[Function]}
        type="button"
        value="x"
      >
        ×
      </button>
    </div>
    <div
      className="body-container"
    >
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="4"
      >
        4
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="5"
      >
        5
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="6"
      >
        6
      </button>
      <button
        className="symbol-2"
        onClick={[Function]}
        type="button"
        value="-"
      >
        -
      </button>
    </div>
    <div
      className="body-container"
    >
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="1"
      >
        1
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="2"
      >
        2
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="3"
      >
        3
      </button>
      <button
        className="symbol-2"
        onClick={[Function]}
        type="button"
        value="+"
      >
        +
      </button>
    </div>
    <div
      className="body-container"
    >
      <button
        className="symbol-1-zero"
        onClick={[Function]}
        type="button"
        value="0"
      >
        0
      </button>
      <button
        className="symbol-1"
        onClick={[Function]}
        type="button"
        value="."
      >
        .
      </button>
      <button
        className="symbol-2"
        onClick={[Function]}
        type="button"
        value="="
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`Components Matches Test Home Components Matches 1`] = `
<div
  className="container-homepage"
>
  <h1>
    Welcome to home page
  </h1>
  <p
    className="text"
  >
    This is a website for all fans of mathematics. It is a Single Page App (SPA) that allows users to make simple calculations and to read a random math-related quote
  </p>
</div>
`;

exports[`Components Matches Test quote Components Matches 1`] = `
<div
  className="container-homepage"
>
  <h1>
    Mathmatics is not about numbers, equations, computations, or algorithms: it is about understanding.
  </h1>
  <h2>
    -William Paul Thurston
  </h2>
</div>
`;
